change name and link header.css

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/styles.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -29,14 +30,16 @@
       <div>
           <img src="/images/profile-hex.png">
       </div>
-      <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Angel Blacite</h2>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
-
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae soluta illo maiores magni omnis aliquam, est quo! Rem labore repellat quidem eius quo, voluptatibus ipsum aliquid. Repellendus, eaque voluptates?
+      </p>
+      <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam velit repellendus quo laborum cumque doloribus nesciunt. Tempore officia fugit voluptates adipisci sapiente, nemo atque, cupiditate temporibus porro incidunt unde ducimus.</p>
     </main>
   </body>
 </html>
