--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,17 @@
       </p>
       <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam velit repellendus quo laborum cumque doloribus nesciunt. Tempore officia fugit voluptates adipisci sapiente, nemo atque, cupiditate temporibus porro incidunt unde ducimus.</p>
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form>
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
     </main>
   </body>
 </html>
