update form method & action, create new-tweet.css

--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,9 @@
   </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae soluta illo maiores magni omnis aliquam, est quo! Rem labore repellat quidem eius quo, voluptatibus ipsum aliquid. Repellendus, eaque voluptates?
-      </p>
-      <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam velit repellendus quo laborum cumque doloribus nesciunt. Tempore officia fugit voluptates adipisci sapiente, nemo atque, cupiditate temporibus porro incidunt unde ducimus.</p>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form>
+        <form method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
