add <write a new tweet> button

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <button><span>Write</span> a new tweet</button>
     </nav>
     <header>
       <div>
