--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
+    <!-- <script type="text/javascript" src="/scripts/client.js"></script> -->
   </head>
 
   <body>
@@ -51,5 +51,8 @@
         </form>
       </section>
     </main>
+    <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  </head>
   </body>
 </html>
