create div for display old-tweet

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,36 @@
           </footer>
         </form>
       </section>
+      <section class="old-tweet">
+        <ul>
+          <li>
+            <header>
+              <p>images</p>
+              <p>User name</p>
+              <p class="handler">Handler</p>
+            </header>
+            <article>The Tweet content</article>
+            <footer>
+              <p>Time stamp new Date() - tweet.created_at</p>
+              <p>Flag, Retweet, Like</p>
+            </footer>
+          </li>
+          <li>
+            <header>User Info</header>
+            <article>The Tweet content</article>
+            <footer>Post time and action buttons</footer>
+          </li>
+          <li>
+            <header>User Info</header>
+            <article>The Tweet content</article>
+            <footer>Post time and action buttons</footer>
+          </li><li>
+            <header>User Info</header>
+            <article>The Tweet content</article>
+            <footer>Post time and action buttons</footer>
+          </li>
+        </ul>
+      </section>
     </main>
   </head>
   </body>
