separate old-tweet css from layout

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -22,6 +23,7 @@
     <!-- App JS -->
     <script defer src="/scripts/client.js"></script>
     <script defer src="/scripts/composer-char-counter.js"></script>
+    <script defer src="/scripts/old-tweet-hover.js"></script>
   </head>
 
   <body>
@@ -37,7 +39,7 @@
       <div>
           <h2>Angel Blacite</h2>
       </div>
-  </header>
+    </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
@@ -57,7 +59,7 @@
             <header>
               <p>images</p>
               <p>User name</p>
-              <p class="handler">Handler</p>
+              <p class="handler fade">Handler</p>
             </header>
             <article>The Tweet content</article>
             <footer>
