--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <!-- Custom Font-Family -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 
@@ -19,7 +20,6 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/db82fa5482.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script src="/scripts/client.js"></script>
@@ -43,6 +43,11 @@
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="err">
+        <!-- <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> -->
+        <p id="err-msg"></p>
+        <!-- <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> -->
+      </section>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
