include moment with cdn

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script src="/scripts/client.js"></script>
@@ -31,7 +32,10 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <button><span>Write</span> a new tweet</button>
+      <div>
+        <button><span>Write</span> a new tweet</button>
+        <i class="fas fa-angle-double-down"></i>
+      </div>
     </nav>
     <header>
       <div>
