add button in nav section for toggle

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <div>
+      <div id="write-tweet">
         <button><span>Write</span> a new tweet</button>
-        <i class="fas fa-angle-double-down"></i>
+        <i class="fa fa-angle-double-down"></i>
       </div>
     </nav>
     <header>
