add scroll to top button

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <!-- App JS -->
     <script src="/scripts/client.js"></script>
     <script defer src="/scripts/composer-char-counter.js"></script>
+    <script src="/scripts/composer.js"></script>
 
   </head>
 
@@ -48,9 +49,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="err">
-        <!-- <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> -->
         <p id="err-msg"></p>
-        <!-- <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> -->
       </section>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
@@ -65,7 +64,7 @@
       </section>
        <section id="tweets-container">
       </section>
+      <button id="scroll-top"><i class="fa fa-angle-double-up"></i></button>
     </main>
-  </head>
   </body>
 </html>
