code review Monica

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         <i class="fa fa-angle-double-down"></i>
       </div>
     </nav>
+    <div class="space"></div>
     <header>
       <div>
           <img src="/images/profile-hex.png">
