add class name for header, update css href

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/styles.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/css/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/css/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/css/old-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/css/header.css" type="text/css" />
+    <link rel="stylesheet" href="/css/new-tweet.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" /> -->
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,7 +41,7 @@
         <i class="fa fa-angle-double-down"></i>
       </div>
     </nav>
-    <header>
+    <header id="user">
       <div>
           <img src="/images/profile-hex.png">
       </div>
