--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,16 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <!-- Custom Font-Family -->
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet"
+    />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/css/layout.css" type="text/css" />
@@ -19,15 +25,17 @@
     <link rel="stylesheet" href="/css/old-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/css/header.css" type="text/css" />
     <link rel="stylesheet" href="/css/new-tweet.css" type="text/css" />
-    <!-- <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" /> -->
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+      integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous">
+    </script>
 
     <!-- App JS -->
     <script src="/scripts/client.js"></script>
-    <script defer src="/scripts/composer-char-counter.js"></script>
+    <script src="/scripts/composer-char-counter.js"></script>
     <script src="/scripts/composer.js"></script>
 
   </head>
@@ -42,12 +50,8 @@
       </div>
     </nav>
     <header id="user">
-      <div>
           <img src="/images/profile-hex.png">
-      </div>
-      <div>
           <h2>Angel Blacite</h2>
-      </div>
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -65,8 +69,7 @@
           </footer>
         </form>
       </section>
-       <section id="tweets-container">
-      </section>
+      <section id="tweets-container"></section>
       <button id="scroll-top"><i class="fa fa-angle-double-up"></i></button>
     </main>
   </body>
